gccida/c0/c_objc_common_init
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/c_objc_common_init/src/c-objc-common.c:687:22: error: use of undeclared identifier 'lang_expand_expr_t'; did you mean 'lang_expand_expr'?
lang_expand_expr = ( lang_expand_expr_t)c_expand_expr; 
                     ^~~~~~~~~~~~~~~~~~
                     lang_expand_expr
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/c_objc_common_init/src/expr.h:769:14: note: 'lang_expand_expr' declared here
extern rtx (*lang_expand_expr) PARAMS ((union tree_node *, rtx,
             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/c_objc_common_init/src/c-objc-common.c:687:41: error: expected ';' after expression
lang_expand_expr = ( lang_expand_expr_t)c_expand_expr; 
                                        ^
                                        ;
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/c_objc_common_init/src/obj/c-objc-common.o] Error 1
